Make some adjustments

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main class="main__container">
     <div class="container__img">
-      <img src="./assets/images/image-omelette.jpeg" alt="Picture of a Omelette">
+      <img src="./assets/images/image-omelette.jpeg" alt="Omelette">
     </div>
     
     <section class="container__headtext">
@@ -50,7 +50,7 @@
 
     <section class="container__instructions">
       <h2 class="instructions__title">Instructions</h2>
-      <ul class="instructions__list">
+      <ol class="instructions__list" type="1">
         <li class="list__instructions">
           <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.
         </li>
@@ -69,7 +69,7 @@
         <li class="list__instructions">
           <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
         </li>
-      </ul>
+      </ol>
     </section>
 
     <hr />
@@ -97,6 +97,7 @@
       </table>
     </section>
   </main>
+
 
   <footer class="credits">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | Coded by <a href="#">Vanessa N. Forin (StarChan)</a>.</p>
